--- a/kevin_reytana/index.html
+++ b/kevin_reytana/index.html
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2075-digital-team
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">Kev 'd Artist</a>
+			<a href="#" class="navbar-brand">BigBoss</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
@@ -102,7 +102,7 @@ http://www.tooplate.com/view/2075-digital-team
 				<!-- tab panes -->
 				<div class="tab-content">
 					<div role="tabpanel" class="tab-pane active" id="design">
-						<p>You can call me Kris or Kev. I'm from Sto. Nino East Lingayen, Pangasinan. I am nonw 19 years old and curently taking BS Information Technology. I was born on May 18, 1997 and my parents are Noel G. Reytana and Eugenia B. Reytana.</p>
+						<p>You can call me Kris or Kev. I'm from Sto. Nino East Lingayen, Pangasinan. I am now 19 years old and currently taking BS Information Technology. I was born on May 18, 1997 and my parents are Noel G. Reytana and Eugenia B. Reytana.</p>
 					</div>
 				</div>
 			</div>
@@ -251,7 +251,7 @@ http://www.tooplate.com/view/2075-digital-team
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<p>&trade;KristheArtist</p>
+				<p>&trade;Kris</p>
 				<hr>
 				<ul class="social-icon">
 					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
